# mars-agents

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mars.toml  pyproject.toml
.claude/agents/: product-lead.md  ux-lead.md
.github/workflows/: ci.yml  release.yml
.meridian/fs/: architecture.md  edge-cases.md  extending-mars.md
docs/: README.md  commands.md  configuration.md  conflicts.md  local-development.md  lock-file.md  sync-pipeline.md  troubleshooting.md
docs/cli/: commands.md
docs/config/: skill-compilation.md
docs/dev/: troubleshooting.md
npm/: .gitignore
npm/@haowjy/mars-agents/: README.md
npm/@haowjy/mars-agents-darwin-arm64/: README.md
npm/@haowjy/mars-agents-darwin-x64/: README.md
npm/@haowjy/mars-agents-linux-arm64/: README.md
npm/@haowjy/mars-agents-linux-x64/: README.md
npm/@mars-agents/cli/: package.json
npm/@mars-agents/darwin-arm64/: package.json
npm/@mars-agents/darwin-x64/: package.json
npm/@mars-agents/linux-x64/: package.json
npm/@meridian-flow/mars-agents/: package.json
npm/@meridian-flow/mars-agents-darwin-arm64/: package.json
npm/@meridian-flow/mars-agents-darwin-x64/: package.json
npm/@meridian-flow/mars-agents-linux-arm64/: package.json
npm/@meridian-flow/mars-agents-linux-x64/: package.json
npm/@meridian-flow/mars-agents-win32-x64/: package.json
scripts/: release.sh
src/: diagnostic.rs  error.rs  lib.rs  link.rs  main.rs  models.rs  types.rs
src/cli/: add.rs  adopt.rs  cache.rs  check.rs  doctor.rs  export.rs  init.rs  link.rs  list.rs  mod.rs  models.rs  outdated.rs  output.rs  override_cmd.rs  remove.rs  rename.rs  repair.rs  resolve_cmd.rs  sync.rs  target.rs  unlink.rs  update.rs  upgrade.rs  validate.rs  version.rs  why.rs
src/compiler/: context.rs  mod.rs  variants.rs
src/compiler/agents/: lower.rs  mod.rs
src/compiler/config_entries/: mod.rs  resolve.rs  stale.rs
src/compiler/hooks/: mod.rs
src/compiler/mcp/: mod.rs
src/compiler/skills/: lower.rs  mod.rs  validate.rs
src/compiler/visibility/: mod.rs
src/config/: mod.rs
src/discover/: mod.rs
src/frontmatter/: mod.rs
src/fs/: mod.rs
src/hash/: mod.rs
src/lock/: mod.rs
src/manifest/: mod.rs
src/merge/: mod.rs
src/models/: availability.rs  harness.rs  mod.rs
src/models/probes/: mod.rs  opencode.rs  opencode_cache.rs
src/platform/: fs.rs  path_syntax.rs  process.rs
src/reconcile/: fs_ops.rs  mod.rs
src/resolve/: compat.rs  constraint.rs  context.rs  filter.rs  mod.rs  package.rs  path.rs  skill.rs  types.rs  version.rs
src/resolve/tests/: filter_tests.rs  integration_tests.rs  mod.rs  skill_tests.rs  tracker_tests.rs  version_tests.rs
src/source/: archive.rs  git.rs  git_cli.rs  mod.rs  parse.rs  path.rs
src/sync/: apply.rs  diff.rs  filter.rs  mod.rs  mutation.rs  plan.rs  provider.rs  rewrite.rs  self_package.rs  target.rs  translate.rs
src/target_sync/: mod.rs
src/validate/: mod.rs
tests/: cli_integration.rs  config_entries.rs  filter_and_rename.rs  init_and_add.rs  local_package.rs  lock_and_repair.rs  model_config.rs  models_cache_ttl.rs  release_metadata.rs  sync_behavior.rs  validate_and_export.rs
tests/common/: mod.rs
tests/integration/: mod.rs
