[package]
name = "mars-agents"
version = "0.0.1"
edition = "2024"
description = "Agent package manager for .agents/ directories"
license = "MIT"
repository = "https://github.com/haowjy/mars-agents"
homepage = "https://github.com/haowjy/mars-agents"
readme = "README.md"
keywords = ["agents", "package-manager", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mars"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
ureq = "3"
flate2 = "1"
tar = "0.4"
dirs = "6"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
tempfile = "3"
termcolor = "1"
libc = "0.2.183"
serde_json = "1.0.149"
pathdiff = "0.2.3"
walkdir = "2"

[dev-dependencies]
assert_fs = "1"
predicates = "3"
assert_cmd = "2"
