[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mars-agents"
version = "0.1.19"
description = "Agent package manager for .agents/ directories"
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["agents", "package-manager", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/haowjy/mars-agents"

[tool.maturin]
bindings = "bin"
strip = true
